# ElectronBot-Voice-main

1.Hardware/MainBoard/: ElectronBot.PcbDoc.htm
1.Hardware/SensorBoard/SensorBoard-SOUND-fix/: SensorBoard.PcbDoc.htm
2.Firmware/ElectronBot-fw/: .mxproject  .project  CMakeLists.txt  ElectronBot-fw.ioc
2.Firmware/ElectronBot-fw/Bsp/: audio.cpp  robot.cpp  robot.h  screen.cpp  screen.h  servo.cpp  servo.h  timer.h  w25qxx.cpp  w25qxx.h
2.Firmware/ElectronBot-fw/Core/Inc/: i2c.h  i2s.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
2.Firmware/ElectronBot-fw/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  i2s.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
2.Firmware/ElectronBot-fw/USB_DEVICE/App/: usbd_desc.c
2.Firmware/ElectronBot-fw/UserApp/: common_inc.h  main.cpp  usbd_cdc_if.cpp  user_task.cpp
2.Firmware/ElectronBotVoice-fw/: CMakeLists.txt  ElectronBot-fw.ioc
2.Firmware/ElectronBotVoice-fw/Bsp/: audio.cpp  audio.h  robot.h  screen.cpp  servo.cpp
2.Firmware/ElectronBotVoice-fw/UserApp/: main.cpp  user_task.cpp
2.Firmware/ServoDrive-fw/: CMakeLists.txt
2.Firmware/ServoDrive-fw/UserApp/: main.cpp
6.Tests/TestDisplayUSB/ElectronBot-fw/Core/Src/: usart.c
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/: CMakeLists.txt
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/lib/: USBInterface.h
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/src/: electron_low_level.cpp  electron_low_level.h  sample.cpp
